# ghc-eventlog-socket

./: .gitignore  ChangeLog.md  LICENSE  README.mkd  cabal.project  default.nix  demo.sh  eventlog-socket.cabal  eventlog_socket.c  flake.nix
.github/actions/setup-ghc-events/: action.yml
.github/workflows/: ci.yml  haskell-ci.yml  simple.yml
cbits/: eventlog_socket.c
examples/fibber/: LICENSE  fibber.cabal  fibber.sh
examples/fibber/app/: Main.hs
include/: eventlog_socket.h
src/GHC/Eventlog/: Socket.hs
test/: Spec.hs
