name:                eventlog-socket
version:             0.1.0.0
synopsis:            Stream GHC eventlog events to external processes.
-- description:
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2018 Ben Gamari
category:            System
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     GHC.Eventlog.Socket
  other-extensions:    ForeignFunctionInterface
  -- Use base lower bound as proxy for GHC >= 8.10
  build-depends:       base >=4.13 && <4.16
  hs-source-dirs:      src
  default-language:    Haskell2010
  c-sources:           eventlog_socket.c

test-suite eventlog-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_eventlog_socket
  hs-source-dirs:
      test
  ghc-options: -eventlog -threaded -rtsopts "-with-rtsopts=-l -N"
  build-depends:
      base
      , QuickCheck
      , eventlog-socket
